TYNSTEP-1403 Fixed some css styles which affect spacing - Increased font size of search results - Moved padding/scroll from passageContenHolder to first child of passageContent

--- a/step-web/src/main/webapp/scss/cross_references.scss
+++ b/step-web/src/main/webapp/scss/cross_references.scss
@@ -38,12 +38,6 @@
 // qtip
 .qtip-content {
   .passageContentHolder {
-    padding: 0;
-
-    &:after {
-      display: none;
-    }
-
     .startLineGroup {
       padding: 0;
       margin: 0;
