--- a/step-web/src/main/webapp/scss/defaults.scss
+++ b/step-web/src/main/webapp/scss/defaults.scss
@@ -16,7 +16,7 @@ body {
   overflow-x: hidden;
 }
 
-body, .dropdown-menu, .searchResultRow, #quickLexicon h1 {
+body, .dropdown-menu, #quickLexicon h1 {
   font-size: $defaultFontSize;
 }
 
