--- a/step-web/src/main/webapp/scss/passage.scss
+++ b/step-web/src/main/webapp/scss/passage.scss
@@ -7,6 +7,7 @@
 
 .passageContentHolder {
   line-height: 1.6;
+  outline: 0;
 }
 
 // headings
@@ -378,11 +379,6 @@ span.caps {
 .editable:focus {
   border: 1px solid black;
   font-style: normal;
-}
-
-.headingContainer {
-  /* 	height: 30px; */
-  /*padding-bottom: 5px;*/
 }
 
 TD.notes {
